--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5 {
   color: @header-font-color;
 }
 
+h1 {
+  font-size:4.0rem;
+}
+
 h2 {
   font-size: 3.2rem;
 }
@@ -28,11 +32,13 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+  color: @shuttle-gray;
 }
 
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
+  padding-top:100px;
 }
 
