--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,14 @@
     p {
       padding:0 15px;
     }
+    .intro-image-wrap {
+      margin:0 auto;
+      max-width:800px;
+    }
+    img {    
+      border-radius:5px;
+      width:100%;
+    }
   
   }
 
@@ -24,6 +32,15 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width:100%;
+        &:nth-child(2){
+          display:none;
+        }
+        &:nth-child(3){
+          display:none;
+        }
+      }
     }
   }
 
@@ -45,9 +62,18 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone {
+      padding:20px 15px;
+      .cReverse();
+      margin-top:20px;
+    }
 
     .walk-text {
       width: 50%;
+      @media @phone {
+        width:100%;
+        margin-top:20px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,12 +84,22 @@
       }
 
       .btn {
+        .btnStyle(@btn-bg-color,@sea-shell);
+        max-width: 30%;
+        @media @phone {
+          max-width:100%;
+          padding:25px;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width:100%;
+        margin-left:0;
+      }
       
       img {
         width: 100%;
