--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,28 @@
 // Mixins Here
+
+.anchorStyle(@decoration, @fontcolor) {
+    text-decoration:@decoration;
+    color:@fontcolor;
+}
+
+
+
+.btnStyle(@bgcolor, @fontcolor) {
+    font-size:1.8rem;
+    padding:8px;
+    border-radius:5px;
+    text-align:center;
+    border:1px solid @shuttle-gray;
+    background-color:@bgcolor;
+    color:@fontcolor;
+}
+
+.cReverse(){
+    flex-direction:column-reverse;
+}
+
+.flexCenter() {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
