--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+.main-header {
+    position:fixed;
+    width:100%;
+    border-bottom: 2px solid @nav-border;
+    background-color:@nav-bg;
+    height:100px;
+    .main-header-wrap {
+        .flexCenter();
+        flex-direction:column;
+        margin-top:13px;
+        nav {
+            display: flex;
+            justify-content: space-around;
+            width: 60%;
+            max-width: 380px;
+            margin-top: 20px;
+            @media @phone {
+                width:80%;
+                max-width:500px;
+            }
+            a {
+                .anchorStyle(none,@nav-font);
+                font-size:1.6rem;
+            }
+        }
+
+    }
+}
