--- a/less/mixins.less
+++ b/less/mixins.less
@@ -26,3 +26,8 @@
     justify-content:center;
     align-items:center;
 }
+
+.btnHoverTransition(@color,@time) {
+    background-color:@color;
+    transition: all @time;
+}
