--- a/less/home-page.less
+++ b/less/home-page.less
@@ -86,6 +86,18 @@
       .btn {
         .btnStyle(@btn-bg-color,@sea-shell);
         max-width: 30%;
+        a {
+          .anchorStyle(none, white);
+        }
+        &:hover {
+          .btnStyle(@sea-shell,@btn-bg-color);
+          a {
+            .anchorStyle(none, @btn-bg-color);
+          }
+          @media @phone {
+            padding:25px;
+          }
+        }
         @media @phone {
           max-width:100%;
           padding:25px;
