--- a/less/modal.less
+++ b/less/modal.less
@@ -31,7 +31,7 @@
   }
 
   .close-wrap {
-    background-color: #ecc600;
+    background-color: #5c5329;
     border-radius: 50%;
     position: absolute;
     top: -15px;
@@ -39,7 +39,7 @@
     font-size: 30px;
     font-weight: bold;
     text-decoration: none;
-    color: #333;
+    color: @sea-shell;
     width: 35px;
     height: 35px;
     display: flex;
@@ -58,7 +58,7 @@
         font-size: 30px;
         font-weight: bold;
         text-decoration: none;
-        color: #333; 
+        color: @sea-shell;
 
         &:hover {
             color:@btn-bg-color;
