--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,7 @@
     border-bottom: 2px solid @nav-border;
     background-color:@nav-bg;
     height:100px;
+    opacity:0.98;
     .main-header-wrap {
         .flexCenter();
         flex-direction:column;
