adding about us

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,11 @@
         .flexCenter();
         flex-direction:column;
         margin-top:13px;
+        h1 {
+            a {
+                .anchorStyle(none,@ebony-clay);
+            }
+        }
         nav {
             display: flex;
             justify-content: space-around;
