--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,10 @@ p {
   flex-direction: column;
   margin-top: 13px;
 }
+.main-header .main-header-wrap h1 a {
+  text-decoration: none;
+  color: #23293B;
+}
 .main-header .main-header-wrap nav {
   display: flex;
   justify-content: space-around;
@@ -449,4 +453,127 @@ select {
 }
 .close-wrap .close:hover {
   color: #22283A;
+}
+.aboutus .intro h2 {
+  padding: 15px;
+}
+.aboutus .intro p {
+  padding: 0 15px;
+}
+.aboutus .intro .intro-image-wrap {
+  margin: 0 auto;
+  max-width: 800px;
+}
+.aboutus .intro img {
+  border-radius: 5px;
+  width: 100%;
+}
+.aboutus .space-images {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.aboutus .space-images img {
+  width: 28%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+@media (max-width:500px) {
+  .aboutus .space-images img {
+    width: 100%;
+  }
+  .aboutus .space-images img:nth-child(2) {
+    display: none;
+  }
+  .aboutus .space-images img:nth-child(3) {
+    display: none;
+  }
+}
+.aboutus .visit-planets {
+  padding: 15px;
+}
+.aboutus .visit-planets h3 {
+  margin-top: 11px;
+}
+.aboutus .visit-planets p {
+  margin-top: 13px;
+}
+.aboutus .walk {
+  margin-top: 60px;
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width:500px) {
+  .aboutus .walk {
+    padding: 20px 15px;
+    flex-direction: column-reverse;
+    margin-top: 20px;
+  }
+}
+.aboutus .walk .walk-text {
+  width: 50%;
+}
+@media (max-width:500px) {
+  .aboutus .walk .walk-text {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+.aboutus .walk .walk-text h3 {
+  margin-bottom: 10px;
+}
+.aboutus .walk .walk-text p {
+  margin-bottom: 26px;
+}
+.aboutus .walk .walk-text a {
+  text-decoration: none;
+  color: white;
+}
+.aboutus .walk .walk-text .btn {
+  font-size: 1.8rem;
+  padding: 8px;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #5E6164;
+  background-color: #22283A;
+  color: #F1F1F1;
+  max-width: 30%;
+}
+.aboutus .walk .walk-text .btn:hover {
+  font-size: 1.8rem;
+  padding: 8px;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #5E6164;
+  background-color: #F1F1F1;
+  color: #22283A;
+}
+@media (max-width:500px) {
+  .aboutus .walk .walk-text .btn:hover {
+    padding: 25px;
+  }
+}
+@media (max-width:500px) {
+  .aboutus .walk .walk-text .btn {
+    max-width: 100%;
+    padding: 25px;
+  }
+}
+.aboutus .walk .walk-img {
+  width: 46%;
+  margin-left: 4%;
+}
+@media (max-width:500px) {
+  .aboutus .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+.aboutus .walk .walk-img img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
