--- a/less/aboutus.less
+++ b/less/aboutus.less
@@ -2,47 +2,65 @@
 .aboutus {
 
     .intro {
-  
+      padding-bottom:20px;
       h2 {
         padding: 15px;
       }
+     
   
       p {
         padding:0 15px;
       }
       .intro-image-wrap {
-        margin:0 auto;
-        max-width:800px;
+        margin: 0 auto;
+        max-width: 800px;
+        border-radius: 5px;
+        max-height: 300px;
+        overflow: hidden;
       }
       img {    
-        border-radius:5px;
+
         width:100%;
+        border-radius:5px;
       }
     
     }
+
   
-    .space-images {
+    .space-box {
       display: flex;
       flex-wrap: wrap;
       width: 100%;
-  
-      img {
-        width: 28%;
-        margin: 20px 2.5%;
-        border-radius: 20px;
-        height: 100%;
-        @media @phone {
-          width:100%;
-          &:nth-child(2){
-            display:none;
-          }
-          &:nth-child(3){
-            display:none;
-          }
-        }
+      justify-content:space-around;
+      h3 {
+        padding: 15px;
       }
+      p {
+        padding:5px 15px;
+      }
+      .about-us-box {
+          width:48%;
+          display:flex;
+          flex-wrap:wrap;
+          @media @tablet {
+            width:100%;
+            padding: 20px 15px;
+          }
+          .about-us-img-wrap {
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+            border-radius: 5px;
+            img {
+              width: 100%;
+              border-radius:5px;
+             }
+            }
+          }
+          
+        }
     }
-  
+    
     .visit-planets {
       padding: 15px;
   
@@ -117,5 +135,5 @@
           border-radius: 10px;
         }
       }
-    }
+    
   }// home
