--- a/less/aboutus.less
+++ b/less/aboutus.less
@@ -79,7 +79,7 @@
       padding: 50px 60px;
       display: flex;
       justify-content: center;
-      @media @phone {
+      @media @tablet {
         padding:20px 15px;
         .cReverse();
         margin-top:20px;
@@ -87,7 +87,7 @@
   
       .walk-text {
         width: 50%;
-        @media @phone {
+        @media @tablet {
           width:100%;
           margin-top:20px;
         }
@@ -110,11 +110,11 @@
           &:hover {
             .btnStyle(@sea-shell,@btn-bg-color);
             
-            @media @phone {
+            @media @tablet {
               padding:25px;
             }
           }
-          @media @phone {
+          @media @tablet {
             max-width:100%;
             padding:25px;
           }
@@ -124,9 +124,12 @@
       .walk-img {
         width: 46%;
         margin-left: 4%;
-        @media @phone {
+        @media @tablet {
           width:100%;
           margin-left:0;
+          max-height:300px;
+          border-radius:5px;
+          overflow:hidden;
         }
         
         img {
