--- a/less/aboutus.less
+++ b/less/aboutus.less
@@ -105,7 +105,7 @@
         }
         .btn {
           .btnStyle(@btn-bg-color,@sea-shell);
-          max-width: 30%;
+         width: 100%;
           
           &:hover {
             .btnStyle(@sea-shell,@btn-bg-color);
