--- a/less/logoanimation.less
+++ b/less/logoanimation.less
@@ -5,7 +5,31 @@
             &:hover {
                 font-size: 2rem;
             }
-        }  
+        } 
+        &:nth-child(1) {
+            width:2.66rem;
+            &:hover {
+                text-align:right;
+            }
+        } 
+        &:nth-child(4){
+            width:2.2rem;
+            &:hover {
+                text-align:center;
+            }
+        }
+        &:nth-child(7){
+            width:2.38rem;
+            &:hover {
+                text-align:center;
+            }
+        }
+        &:nth-child(10) {
+            width:2.4rem;
+            &:hover {
+                text-align:center;
+            }
+        }
         &:nth-child(even) {
             &:hover {
                 color:red;
